kubernetes/1-configure_cluster/5-ollama/complete.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: ollama
  ports:
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer # ClusterIssuer name
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  ollama.demo.internal.maguscorp.com.br
    secretName: tls-ollama-ingress
  rules:
  - host: ollama.demo.internal.maguscorp.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ollama
            port:
              number: 80
